new node for capturing I/O off processes

--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
 
     "nodes": {
        "erlconfig": "nodes/erlconfig.js",
-       "erlprocess": "nodes/erlprocess.js"
+       "erlprocess": "nodes/erlprocess.js",
+       "erlcaptureio": "nodes/erlcaptureio.js"
     }
   },
 
